--- a/tensquare_base/src/main/resources/application.yml
+++ b/tensquare_base/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: tensquare-base #指定服务名
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://47.107.175.146:3306/tensquare_base?characterEncoding=utf-8&amp;useSSL=false
+    url: jdbc:mysql://47.107.175.146:3306/tensquare_base?characterEncoding=utf-8&useSSL=false
     username: root
     password: root105752
   jpa:
