--- a/tensquare_article/src/main/resources/application.yml
+++ b/tensquare_article/src/main/resources/application.yml
@@ -1,15 +1,19 @@
-server: 
+server:
   port: 9004
-spring: 
-  application:  
+spring:
+  application:
     name: tensquare-article #指定服务名
-  datasource:  
+  datasource:
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://47.107.175.146:3306/tensquare_article?characterEncoding=utf-8&useSSL=false
     username: root
     password: root105752
-  jpa: 
+  jpa:
     database: MySQL
     show-sql: true
   redis:
     host: 47.107.175.146
+  data:
+    mongodb:
+      host: 47.107.175.146
+      database: recruitdb
