--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>tensquare_article</module>
         <module>tensquare_gathering</module>
         <module>tensquare_spit</module>
+        <module>tensquare_user</module>
     </modules>
     <packaging>pom</packaging>
 
