--- a/tensquare_search/src/main/resources/application.yml
+++ b/tensquare_search/src/main/resources/application.yml
@@ -6,3 +6,9 @@ spring:
   data:
     elasticsearch:
       cluster-nodes: 123.207.47.210:9300
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:6868/eureka
+  instance:
+    prefer-ip-address: true
