--- a/tensquare_user/src/main/resources/application.yml
+++ b/tensquare_user/src/main/resources/application.yml
@@ -15,3 +15,9 @@ spring:
     host: 47.107.175.146
   rabbitmq:
     host: 47.107.175.146
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:6868/eureka
+  instance:
+    prefer-ip-address: true
