--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <module>tensquare_spit</module>
         <module>tensquare_user</module>
         <module>tensquare_search</module>
+        <module>tensquare_eureka</module>
+        <module>tensquare_sms</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -56,6 +58,18 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Finchley.M9</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <repositories>
         <repository>
