--- a/tensquare_article/src/main/resources/application.yml
+++ b/tensquare_article/src/main/resources/application.yml
@@ -17,3 +17,9 @@ spring:
     mongodb:
       host: 47.107.175.146
       database: recruitdb
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:6868/eureka
+  instance:
+    prefer-ip-address: true
