--- a/tensquare_spit/src/main/resources/application.yml
+++ b/tensquare_spit/src/main/resources/application.yml
@@ -9,3 +9,9 @@ spring:
       database: spitdb
   redis:
     host: 47.107.175.146
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:6868/eureka
+  instance:
+    prefer-ip-address: true
